# src/main/java/com/cufe/searchengine/server/controller/ImageQueryApiController.java
@@ -52,7 +52,7 @@ public class ImageQueryApiController {
     @RequestMapping(value = "/api/image/query",
         produces = { "application/json" }, 
         method = RequestMethod.GET)
-    ResponseEntity<ResultPage> imageQuery(@NotNull @ApiParam(value = "string to search for", required = true) @Valid @RequestParam(value = "q", required = true) String q,@ApiParam(value = "page of results to fetch, default 1") @Valid @RequestParam(value = "page", required = false) Integer page) {
+    ResponseEntity<ResultPage> imageQuery(@NotNull @ApiParam(value = "string to search for", required = true) @Valid @RequestParam(value = "q", required = true) String q,@ApiParam(value = "page of results to fetch, default 1") @Valid @RequestParam(value = "page", required = false) Integer page,@ApiParam(value = "country alpha-3 code (ISO 3166) all capital") @Valid @RequestParam(value = "country", required = false) String country) {
 		if ("1".equals(System.getenv("MOCK"))) {
 			ArrayList<QueryResult> queryResults = new ArrayList<>();
 			queryResults.add(new QueryResult()
